ADD: NotFOund component, env varible and vue-router

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" class="bg-gray-50">
+<html lang="es" class="bg-gray-50 h-full">
 
 <head>
   <meta charset="UTF-8" />
@@ -15,7 +15,7 @@
   <title>Logysto</title>
 </head>
 
-<body class="h-screen">
+<body class="h-full">
   <div class="h-full" id="app"></div>
   <div id="modals"></div>
   <script type="module" src="/src/main.js"></script>
